centrado de carousel

--- a/contacto.html
+++ b/contacto.html
@@ -42,7 +42,8 @@
             </div>
         </nav>
     </header>
-    <main></main>
+    <main>
+    </main>
     <footer class="footer">
         <div class="container">
             <div class="row">
