--- a/index.html
+++ b/index.html
@@ -43,6 +43,39 @@
         </nav>
     </header>
     <main>
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <h1 class="display-5 mt-2 p-2 text-center">La Cocina del Chef</h1>
+                    <hr class="separador">
+                </div>
+            </div>
+        </div>
+        <div class="row justify-content-center mb-50">
+            <div id="carouselExampleFade" class="carousel slide carousel-fade " data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="./img/index1.jpg" class="d-block w-100" alt="Comida">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./img/index2.jpg" class="d-block w-100" alt="Comida">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./img/index3.jpg" class="d-block w-100" alt="Comida">
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </div>
     </main>
     <footer class="footer">
         <div class="container">
