--- a/galeria.html
+++ b/galeria.html
@@ -9,7 +9,6 @@
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Arvo&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/300fb5c1b5.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/styles.css">
 </head>
@@ -46,13 +45,13 @@
     <footer class="footer">
         <div class="container">
             <div class="row">
-                <div class="col-12 col-md-4">
+                <div class="col-12 col-md-4 col-xs-6 d-center">
                     <i class="fa-brands fa-facebook fa-2x"></i>
                 </div>
-                <div class="col-12 col-md-4">
+                <div class="col-12 col-md-4 col-xs-6 d-center">
                     <i class="fa-brands fa-instagram fa-2x"></i>
                 </div>
-                <div class="col-12 col-md-4">
+                <div class="col-12 col-md-4 col-xs-6 d-center">
                     <i class="fa-brands fa-whatsapp fa-2x"></i>
                 </div>
             </div>
