--- a/index.html
+++ b/index.html
@@ -9,14 +9,13 @@
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Arvo&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/300fb5c1b5.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
     <header>
-        <nav class="navbar navbar-expand navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-lg bg-light">
             <div class="container-fluid">
                 <a class="navbar-brand" href="./index.html">Inicio</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -76,17 +75,25 @@
                 </button>
             </div>
         </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <h3 class="display-5 mt-2 p-2 text-center" id="subtitulo1">Sarasa</h3>
+                    <p class="display-5 mt-2 p-2 text-center">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi quo perferendis excepturi? Ipsa sint et cumque exercitationem eaque veritatis assumenda eius, animi doloribus rerum iusto ex culpa blanditiis minima atque modi quod sit deleniti reprehenderit!</p>
+                </div>
+            </div>
+        </div>
     </main>
     <footer class="footer">
         <div class="container">
             <div class="row">
-                <div class="col-12 col-md-4">
+                <div class="col-12 col-md-4 col-xs-6 d-center">
                     <i class="fa-brands fa-facebook fa-2x"></i>
                 </div>
-                <div class="col-12 col-md-4">
+                <div class="col-12 col-md-4 col-xs-6 d-center">
                     <i class="fa-brands fa-instagram fa-2x"></i>
                 </div>
-                <div class="col-12 col-md-4">
+                <div class="col-12 col-md-4 col-xs-6 d-center">
                     <i class="fa-brands fa-whatsapp fa-2x"></i>
                 </div>
             </div>
