--- a/nosotros.html
+++ b/nosotros.html
@@ -15,7 +15,7 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-lg bg-light">
             <div class="container-fluid">
                 <a class="navbar-brand" href="./index.html">Inicio</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -41,6 +41,25 @@
             </div>
         </nav>
     </header>
+    <main>
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <h2>NUESTRO STAFF</h2>
+                </div>
+                <div class="col-6 col-xs-1">
+                    <h3>El chef</h3>
+                    <img src="./img/chef.jpg" alt="el chef">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae suscipit molestias veniam quos minus, quam vitae dolorem recusandae inventore laborum earum blanditiis consequatur autem harum ducimus non numquam quis! Praesentium, libero facere minus explicabo amet sit laudantium recusandae alias ullam aliquam eveniet dignissimos, natus necessitatibus pariatur quo repellendus illum! Distinctio molestiae explicabo sapiente ex? Id neque ex a repellat possimus provident ipsam reprehenderit amet. Non vitae inventore autem quos dolore, dolores, alias sunt quam similique, cum temporibus eius sit itaque!</p>
+                </div>
+                <div class="col-6 col-xs-1">
+                    <h3>El resto</h3>
+                    <img src="./img/el_resto.jpg" alt="personas del local">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi maxime excepturi fuga minus impedit eligendi sint laboriosam veniam ab necessitatibus ea temporibus, aut voluptate saepe maiores laborum incidunt dolorem? Similique cumque eligendi saepe reiciendis tenetur doloremque ipsam quaerat sapiente sequi laboriosam harum quisquam recusandae laborum velit eos, corporis sint debitis aliquam praesentium accusamus dicta ducimus nam nemo culpa. In, repellendus saepe earum sed officiis hic nobis? Culpa consequuntur eos deserunt libero quisquam dolorum animi quos corporis quae recusandae aperiam iusto molestiae temporibus earum voluptates, nulla placeat qui! Aut, at corporis!</p>
+                </div>
+            </div>
+        </div>
+    </main>
     <footer class="footer">
         <div class="container">
             <div class="row">
