corregi etiqueta semanticas

--- a/nosotros.html
+++ b/nosotros.html
@@ -42,8 +42,8 @@
         </nav>
     </header>
     <main>
-        <div class="container">
-            <div class="row">
+        <section class="container">
+            <article class="row">
                 <div class="col-12">
                     <h2 class="subtitulo">NUESTRO STAFF</h2>
                 </div>
@@ -57,8 +57,8 @@
                     <img src="./img/el_resto.jpg" alt="personas del local">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae suscipit molestias veniam quos minus, quam vitae dolorem recusandae inventore laborum earum blanditiis consequatur autem harum ducimus non numquam quis! Praesentium, libero facere minus explicabo amet sit laudantium recusandae alias ullam aliquam eveniet dignissimos, natus necessitatibus pariatur quo repellendus illum! Distinctio molestiae explicabo sapiente ex? Id neque ex a repellat possimus provident ipsam reprehenderit amet. Non vitae inventore autem quos dolore, dolores, alias sunt quam similique, cum temporibus eius sit itaque!</p>
                 </div>
-            </div>
-        </div>
+            </article>
+        </section>
     </main>
     <footer class="footer">
         <div class="container">
