--- a/productos.html
+++ b/productos.html
@@ -41,7 +41,9 @@
             </div>
         </nav>
     </header>
-    <main></main>
+    <main>
+        
+    </main>
     <footer class="footer">
         <div class="container">
             <div class="row">
