--- a/contacto.html
+++ b/contacto.html
@@ -42,6 +42,69 @@
         </nav>
     </header>
     <main>
+        <section class="container">
+            <div class="row">
+                <div class="col-12">
+                    <h1 class="display-5 mt-2 p-2 text-center">La Cocina del Chef</h1>
+                    <hr class="separador">
+                    <h3 class="display-11 mt-2 p-2 text-center">Las reservas se toman solo con una semana de antelación</h3>
+                    <hr class="separador">
+                </div>
+            </div>
+        </section>
+        <form class="row g-3">
+            <div class="col-md-6">
+                <label for="inputName" class="form-label">Nombre</label>
+                <input type="name" class="form-control" id="inputPassword4">
+            </div>
+            <div class="col-md-6">
+                <label for="inputEmail4" class="form-label">Email</label>
+                <input type="email" class="form-control" id="inputEmail4" placeholder="Lacocinadelchef@sarasa.com">
+            </div>            
+            <div class="col-12">
+                <label for="inputAddress" class="form-label">Telefono</label>
+                <input type="text" class="form-control" id="inputAddress" placeholder="2230-000000">
+            </div>
+            <div class="col-md-4">
+                <label for="inputState" class="form-label">Dia de la reserva</label>
+                <select id="inputState" class="form-select">
+                    <option selected>Lunes proximo</option>
+                    <option>Martes proximo</option>
+                    <option>Miercoles proximo</option>
+                    <option>Jueves proximo</option>
+                    <option>Viernes proximo</option>
+                    <option>Sabado proximo</option>
+                    <option>Domingo proximo</option>
+                </select>
+            </div>
+            <div class="col-md-4">
+                <label for="inputState" class="form-label">Cantidad de personas</label>
+                <select id="inputState" class="form-select">
+                    <option selected>1</option>
+                    <option>2</option>
+                    <option>3</option>
+                    <option>4</option>
+                    <option>5</option>
+                    <option>6</option>
+                    <option>7</option>
+                    <option>8</option>
+                </select>
+            </div>
+            <div class="col-12">
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" id="gridCheck">
+                    <label class="form-check-label" for="gridCheck">
+                        Silla para niños
+                    </label>
+                </div>
+            </div>
+            <div class="col-12">
+                <button type="submit" class="btn btn-primary">Reservar</button>
+            </div>
+            <div class="col-12">
+                <p>Por inconvenientes o cancelaciones llamar al<br> 223-477-7777</p>
+            </div>
+        </form>
     </main>
     <footer class="footer">
         <div class="container">
