cambie de productos a carta en el nav

--- a/productos.html
+++ b/productos.html
@@ -28,7 +28,7 @@
                             <a class="nav-link active" aria-current="page" href="./nosotros.html">Nosotros</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./productos.html">Productos</a>
+                            <a class="nav-link" href="./productos.html">Carta</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./galeria.html">Galeria</a>
@@ -41,7 +41,15 @@
             </div>
         </nav>
     </header>
-    <main></main>
+    <main>
+        <section class="container">
+            <article class="row">
+                <div class="col-12">
+                    <h2 class="subtitulo">Carta</h2>
+                </div>
+            </article>
+        </section>
+    </main>
     <footer class="footer">
         <div class="container">
             <div class="row">
