--- a/contacto.html
+++ b/contacto.html
@@ -28,7 +28,7 @@
                             <a class="nav-link active" aria-current="page" href="./nosotros.html">Nosotros</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./productos.html">Productos</a>
+                            <a class="nav-link" href="./productos.html">Carta</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./galeria.html">Galeria</a>
